adding portfolio images

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </header>
         <!-- About-->
-        <section class="page-section bg-primary" id="about">
+        <!-- <section class="page-section bg-primary" id="about">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
@@ -99,55 +99,83 @@
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/12.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/12.jpg" alt="" />
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
-                            <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/7.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/7.jpg" alt="" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/8.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/8.jpg" alt="" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/9.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/9.jpg" alt="" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/10.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/10.jpg" alt="" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/11.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/11.jpg" alt="" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
+                        </a>
+                    </div>
+
+                    <!-- Only for small screens -->
+                    <div class="col-lg-4 col-sm-6 visible-sm-only">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/13.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/13.jpg" alt="" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 visible-sm-only">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/14.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/14.jpg" alt="" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 visible-sm-only">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/15.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/15.jpg" alt="" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 visible-sm-only">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/16.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/16.jpg" alt="" />
                         </a>
                     </div>
                 </div>
@@ -160,7 +188,6 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="mt-0">Let's Get In Touch!</h2>
                         <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
                     </div>
                 </div>
                 <div class="row">
@@ -176,10 +203,7 @@
                 </div>
             </div>
         </section>
-        <!-- Footer-->
-        <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright - WOODBELL INTERIORS</div></div>
-        </footer>
+
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
