--- a/index.html
+++ b/index.html
@@ -19,42 +19,23 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                    WOODBELL INTERIORS
-                </a>
-            </div>
-        </nav>
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container h-100">
-                <div class="row h-100 align-items-center justify-content-center text-center">
-                    <div class="col-lg-10 align-self-end">
-                        <h1 class="text-uppercase text-white font-weight-bold">Interior designs to the next level</h1>
-                        <hr class="divider my-4" />
-                    </div>
-                    <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Wood Bell Interiors can help you build better home in your dreams! Just tell us your tastes!</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
-                    </div>
-                </div>
-            </div>
         </header>
+
         <!-- About-->
-        <!-- <section class="page-section bg-primary" id="about">
+        <section class="page-section bg-primary" id="about">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">We've got what you need!</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Wood Bell Interiors has everything you need to get your new home modelled in no time!</p>
-                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+                        <p class="text-white mb-4">Interior designs to the next level. Modular Kitchen,  Office, Shop and Apartment Interiors</p>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
+
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
@@ -62,28 +43,14 @@
                 <hr class="divider my-4" />
                 <div class="row">
                     <div class="col-lg-6 col-md-6 text-center">
-                        <div class="mt-5">
+                        <div class="mt-2">
                             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Elegant Designs</h3>
                             <p class="text-muted mb-0">We make your dreams happen with our elegant designs</p>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
-                        </div>
-                    </div> -->
-                    <!-- <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-                        </div>
-                    </div> -->
                     <div class="col-lg-6 col-md-6 text-center">
-                        <div class="mt-5">
+                        <div class="mt-2">
                             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Made with Love</h3>
                             <p class="text-muted mb-0">Can we make our clients happy if it's not made with love?</p>
@@ -191,14 +158,29 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+91 (949) 636-8606</div>
+                    <div class="col-lg-4 ml-auto text-center mb-lg-0">
+                        <div class="row">
+                            <div class="col-3 col-sm-4 text-right">
+                                <i class="fas fa-phone fa-2x mb-3 text-primary"></i>
+                            </div>
+                            <div class="col-8 pt-1 text-left">+91 (949) 636-8606</div>
+                        </div>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
-                        <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-                        <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block" href="mailto:woodbellinteriors@gmail.com">woodbellinteriors@gmail.com</a>
+                        <div class="row">
+                            <div class="col-3 col-sm-4 text-right">
+                                <i class="fas fa-envelope fa-2x mb-3 text-primary"></i>
+                            </div>
+                            <div class="col-8 pt-1 text-left"><a class="d-block" href="mailto:woodbellinteriors@gmail.com">woodbellinteriors@gmail.com</a></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mr-auto text-center">
+                        <div class="row">
+                            <div class="col-3 col-sm-4 text-right">
+                                <i class="fab fa-instagram fa-2x mb-3 text-primary"></i>
+                            </div>
+                            <div class="col-8 pt-1 text-left"><a class="d-block" href="https://www.instagram.com/woodbell_interiors/" target="_blank">woodbell_interiors</a></div>
+                        </div>
                     </div>
                 </div>
             </div>
