--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Wood Bell Designs</title>
+        <title>WOODBELL INTERIORS</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -30,7 +30,10 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">We've got what you need!</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white mb-4">Interior designs to the next level. Modular Kitchen,  Office, Shop and Apartment Interiors</p>
+                        <p class="text-white mb-4">
+                            Modular Kitchen,  Office, Shop and Apartment Interiors.
+                            The expert in versatile home furnishings. Stylish and trendy. The right puzzle piece for your home.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -46,7 +49,7 @@
                         <div class="mt-2">
                             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Elegant Designs</h3>
-                            <p class="text-muted mb-0">We make your dreams happen with our elegant designs</p>
+                            <p class="text-muted mb-0">We make your dreams happen with our elegant designs. 100% custom made and timely completion. 100+ colors and shades.</p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 text-center">
@@ -108,23 +111,18 @@
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/9.jpg" alt="" />
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+
+                    <!-- Only for small screens -->
+                    <div class="col-lg-4 col-sm-6 visible-sm-only">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/10.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/10.jpg" alt="" />
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-sm-6 visible-sm-only">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/11.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/11.jpg" alt="" />
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
-                        </a>
-                    </div>
-
-                    <!-- Only for small screens -->
                     <div class="col-lg-4 col-sm-6 visible-sm-only">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/13.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/13.jpg" alt="" />
@@ -158,7 +156,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 ml-auto text-center mb-lg-0">
+                    <div class="col-lg-6 ml-auto text-center mb-lg-0">
                         <div class="row">
                             <div class="col-3 col-sm-4 text-right">
                                 <i class="fas fa-phone fa-2x mb-3 text-primary"></i>
@@ -166,7 +164,15 @@
                             <div class="col-8 pt-1 text-left">+91 (949) 636-8606</div>
                         </div>
                     </div>
-                    <div class="col-lg-4 mr-auto text-center">
+                    <div class="col-lg-6 mr-auto text-center">
+                        <div class="row">
+                            <div class="col-3 col-sm-4 text-right">
+                                <i class="fas fa-address-card fa-2x mb-3 text-primary"></i>
+                            </div>
+                            <div class="col-8 pt-1 text-left">Kazhakuttom, TVM - 695582</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 mr-auto text-center">
                         <div class="row">
                             <div class="col-3 col-sm-4 text-right">
                                 <i class="fas fa-envelope fa-2x mb-3 text-primary"></i>
@@ -174,12 +180,20 @@
                             <div class="col-8 pt-1 text-left"><a class="d-block" href="mailto:woodbellinteriors@gmail.com">woodbellinteriors@gmail.com</a></div>
                         </div>
                     </div>
-                    <div class="col-lg-4 mr-auto text-center">
+                    <div class="col-lg-6 mr-auto text-center">
                         <div class="row">
                             <div class="col-3 col-sm-4 text-right">
                                 <i class="fab fa-instagram fa-2x mb-3 text-primary"></i>
                             </div>
                             <div class="col-8 pt-1 text-left"><a class="d-block" href="https://www.instagram.com/woodbell_interiors/" target="_blank">woodbell_interiors</a></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 mr-auto text-center">
+                        <div class="row">
+                            <div class="col-3 col-sm-4 text-right">
+                                <i class="fab fa-facebook-f fa-2x mb-3 text-primary"></i>
+                            </div>
+                            <div class="col-8 pt-1 text-left"><a class="d-block" href="https://www.facebook.com/Woodbell-Interiors-227991578617820" target="_blank">Woodbell Interiors</a></div>
                         </div>
                     </div>
                 </div>
