--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                         <div class="mt-2">
                             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Elegant Designs</h3>
-                            <p class="text-muted mb-0">We make your dreams happen with our elegant designs. 100% custom made and timely completion. 100+ colors and shades.</p>
+                            <p class="text-muted mb-0">We make your dreams happen with our elegant designs. 100+ colors and shades.</p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 text-center">
                         <div class="mt-2">
                             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Can we make our clients happy if it's not made with love?</p>
+                            <p class="text-muted mb-0">Can we make our clients happy if it's not made with love? 100% custom made and timely completion.</p>
                         </div>
                     </div>
                 </div>
