--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                         <h2 class="text-white mt-0">We've got what you need!</h2>
                         <hr class="divider light my-4" />
                         <p class="text-white mb-4">
-                            Modular Kitchen,  Office, Shop and Apartment Interiors.
-                            The expert in versatile home furnishings. Stylish and trendy. The right puzzle piece for your home.
+                            Having solid experience in the Interior design market, Woodbell Interiors in Kaniyapuram presents a wide choice of modular kitchen, Office Interiors, Apartment interiors, Shops to its clients. Creating unique and innovative spaces ever since established, the company has been able to build a strong foundation over the passage of time. The Designs has constantly strived to exceed the expectations of its clients through quality work, transparent work ethics and use of cutting-edge technology. The organization is committed to provide an enhanced living experience to the residents through constant innovation and creative delivery of projects.
                         </p>
                     </div>
                 </div>
