--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 text-center">
+                       <div class="mt-2">
+                           <p class="text-muted mb-0">Woodbell Interiors in Kaniyapuram has delivered a large number of projects in the past that have received rave reviews and appreciation from numerous prestigious builders and other organizations associated with the Interior Design business. The team comprises Interior designing professionals having vast experience and knowledge about properties. Each of the projects of this company exhibits avant-garde interior designs – absolutely lavish, ostentatious and one-of-its-kinds. It has pioneered newer technologies and modern engineering that has helped it to create landmark residential townships as well as commercial establishments. Quality, on-time delivery and trust stand at the core of the business of this real estate organization. By giving wings to the dreams of millions of people, it is truly making a mark in the field. The office remains fully-operational between 09:30 - 6:30. To book appointments with one of the executives of the company, people can use the phone numbers mentioned above.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Portfolio-->
