--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">We've got what you need!</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white mb-4">
+                        <p class="text-white mb-4 text-justify">
                             Having solid experience in the Interior design market, Woodbell Interiors in Kaniyapuram presents a wide choice of modular kitchen, Office Interiors, Apartment interiors, Shops to its clients. Creating unique and innovative spaces ever since established, the company has been able to build a strong foundation over the passage of time. The Designs has constantly strived to exceed the expectations of its clients through quality work, transparent work ethics and use of cutting-edge technology. The organization is committed to provide an enhanced living experience to the residents through constant innovation and creative delivery of projects.
                         </p>
                     </div>
@@ -67,7 +67,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Services Offered at Wood Bell Interiors</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white mb-4">
+                        <p class="text-white mb-4 text-justify">
                             Woodbell Interiors in Kaniyapuram has delivered a large number of projects in the past that have received rave reviews and appreciation from numerous prestigious builders and other organizations associated with the Interior Design business. The team comprises Interior designing professionals having vast experience and knowledge about properties. Each of the projects of this company exhibits avant-garde interior designs – absolutely lavish, ostentatious and one-of-its-kinds. It has pioneered newer technologies and modern engineering that has helped it to create landmark residential townships as well as commercial establishments. Quality, on-time delivery and trust stand at the core of the business of this real estate organization. By giving wings to the dreams of millions of people, it is truly making a mark in the field. The office remains fully-operational between 09:30 - 6:30. To book appointments with one of the executives of the company, people can use the phone numbers mentioned above.</p>
                         </p>
                     </div>
