adding see more

--- a/index.html
+++ b/index.html
@@ -108,22 +108,10 @@
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/7.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/7.jpg" alt="" />
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/8.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/8.jpg" alt="" />
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/9.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/9.jpg" alt="" />
-                        </a>
-                    </div>
 
+                      <a href="http://woodbellinterior.com/">
+                        <p style="text-align:center;">See more >> </p>
+                      </a>
                     <!-- Only for small screens -->
                     <div class="col-lg-4 col-sm-6 visible-sm-only">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/10.jpg">
