--- a/index.html
+++ b/index.html
@@ -126,11 +126,6 @@
 
                     <!-- Only for small screens -->
                     <div class="col-lg-4 col-sm-6 visible-sm-only">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/10.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/10.jpg" alt="" />
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 visible-sm-only">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/11.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/11.jpg" alt="" />
                         </a>
@@ -153,6 +148,25 @@
                     <div class="col-lg-4 col-sm-6 visible-sm-only">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/16.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/16.jpg" alt="" />
+                        </a>
+                    </div>
+
+                    <div class="col-lg-4 col-sm-6 visible-sm-only">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/17.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/17.jpg" alt="" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 visible-sm-only">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/18.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/18.jpg" alt="" />
+                        </a>
+                    </div><div class="col-lg-4 col-sm-6 visible-sm-only">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/19.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/19.jpg" alt="" />
+                        </a>
+                    </div><div class="col-lg-4 col-sm-6 visible-sm-only">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/20.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/20.jpg" alt="" />
                         </a>
                     </div>
                 </div>
